learning_basilisk/couette_example/cylinder_couette/cylcouette.log~
In file included from /usr/include/stdint.h:25:0,
                 from /usr/lib/gcc/x86_64-redhat-linux/4.8.5/include/stdint.h:9,
                 from cylcouette-cpp.c:6:
/usr/include/features.h:330:4: warning: #warning _FORTIFY_SOURCE requires compiling with optimization (-O) [-Wcpp]
 #  warning _FORTIFY_SOURCE requires compiling with optimization (-O)
    ^
In file included from cylcouette.c:5:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/framebuffer.h:1:29: warning: redefinition of typedef ‘framebuffer’ [-Wpedantic]
 typedef struct _framebuffer framebuffer;
                             ^
In file included from /gpfs/runtime/opt/basilisk/1.0/src/view.h:68:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/framebuffer.h:1:29: note: previous declaration of ‘framebuffer’ was here
 typedef struct _framebuffer framebuffer;
                             ^
In file included from cylcouette.c:5:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/framebuffer.h:2:22: warning: redefinition of typedef ‘fbdepth_t’ [-Wpedantic]
 typedef unsigned int fbdepth_t;
                      ^
In file included from /gpfs/runtime/opt/basilisk/1.0/src/view.h:68:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/framebuffer.h:2:22: note: previous declaration of ‘fbdepth_t’ was here
 typedef unsigned int fbdepth_t;
                      ^
In file included from cylcouette.c:7:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:27:3: error: conflicting types for ‘Frustum’
 } Frustum;
   ^
In file included from /gpfs/runtime/opt/basilisk/1.0/src/view.h:71:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:27:3: note: previous declaration of ‘Frustum’ was here
 } Frustum;
   ^
In file included from cylcouette.c:7:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:29:6: error: conflicting types for ‘gl_get_frustum’
 void gl_get_frustum (Frustum * f);
      ^
In file included from /gpfs/runtime/opt/basilisk/1.0/src/view.h:71:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:29:6: note: previous declaration of ‘gl_get_frustum’ was here
 void gl_get_frustum (Frustum * f);
      ^
In file included from cylcouette.c:7:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:30:5: error: conflicting types for ‘sphere_in_frustum’
 int sphere_in_frustum (double x, double y, double z, double r, Frustum * f);
     ^
In file included from /gpfs/runtime/opt/basilisk/1.0/src/view.h:71:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:30:5: note: previous declaration of ‘sphere_in_frustum’ was here
 int sphere_in_frustum (double x, double y, double z, double r, Frustum * f);
     ^
In file included from cylcouette.c:7:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:31:7: error: conflicting types for ‘sphere_diameter’
 float sphere_diameter (double x, double y, double z, double r, Frustum * f);
       ^
In file included from /gpfs/runtime/opt/basilisk/1.0/src/view.h:71:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:31:7: note: previous declaration of ‘sphere_diameter’ was here
 float sphere_diameter (double x, double y, double z, double r, Frustum * f);
       ^
In file included from cylcouette.c:7:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:34:6: error: nested redefinition of ‘enum FeedbackFormat’
 enum FeedbackFormat {
      ^
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:34:6: error: redeclaration of ‘enum FeedbackFormat’
In file included from /gpfs/runtime/opt/basilisk/1.0/src/view.h:71:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:34:6: note: originally defined here
 enum FeedbackFormat {
      ^
In file included from cylcouette.c:7:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:35:3: error: redeclaration of enumerator ‘FEEDBACK_GNU’
   FEEDBACK_GNU, FEEDBACK_OBJ, FEEDBACK_KML
   ^
In file included from /gpfs/runtime/opt/basilisk/1.0/src/view.h:71:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:35:3: note: previous definition of ‘FEEDBACK_GNU’ was here
   FEEDBACK_GNU, FEEDBACK_OBJ, FEEDBACK_KML
   ^
In file included from cylcouette.c:7:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:35:17: error: redeclaration of enumerator ‘FEEDBACK_OBJ’
   FEEDBACK_GNU, FEEDBACK_OBJ, FEEDBACK_KML
                 ^
In file included from /gpfs/runtime/opt/basilisk/1.0/src/view.h:71:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:35:17: note: previous definition of ‘FEEDBACK_OBJ’ was here
   FEEDBACK_GNU, FEEDBACK_OBJ, FEEDBACK_KML
                 ^
In file included from cylcouette.c:7:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:35:31: error: redeclaration of enumerator ‘FEEDBACK_KML’
   FEEDBACK_GNU, FEEDBACK_OBJ, FEEDBACK_KML
                               ^
In file included from /gpfs/runtime/opt/basilisk/1.0/src/view.h:71:0:
/gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:35:31: note: previous definition of ‘FEEDBACK_KML’ was here
   FEEDBACK_GNU, FEEDBACK_OBJ, FEEDBACK_KML
                               ^
In file included from /gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:45:0,
                 from cylcouette.c:7:
/gpfs/runtime/opt/basilisk/1.0/src/gl/parser.h:1:22: warning: redefinition of typedef ‘Node’ [-Wpedantic]
 typedef struct _Node Node;
                      ^
In file included from /gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:45:0,
                 from /gpfs/runtime/opt/basilisk/1.0/src/view.h:71:
/gpfs/runtime/opt/basilisk/1.0/src/gl/parser.h:1:22: note: previous declaration of ‘Node’ was here
 typedef struct _Node Node;
                      ^
In file included from /gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:45:0,
                 from cylcouette.c:7:
/gpfs/runtime/opt/basilisk/1.0/src/gl/parser.h:3:8: error: redefinition of ‘struct _Node’
 struct _Node {
        ^
In file included from /gpfs/runtime/opt/basilisk/1.0/src/gl/utils.h:45:0,
                 from /gpfs/runtime/opt/basilisk/1.0/src/view.h:71:
/gpfs/runtime/opt/basilisk/1.0/src/gl/parser.h:1:16: note: originally defined here
 typedef struct _Node Node;
                ^
